# now_flutter_sdk

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/nowwallet/now_flutter_sdk/: NowFlutterSdkPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/nowwallet/now_flutter_sdk_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: now_flutter_sdk.podspec
ios/Classes/: NowFlutterSdkPlugin.swift  NowPlugin.h  NowPlugin.m
lib/: now_flutter_sdk.dart  now_flutter_sdk_method_channel.dart  now_flutter_sdk_platform_interface.dart
rustbloc/: Cargo.toml
rustbloc/src/: blockchain.rs  key.rs  psbt.rs  types.rs
test/: now_flutter_sdk_method_channel_test.dart  now_flutter_sdk_test.dart
